<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layout_score_status"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:background="@android:color/white"
        android:visibility="visible">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_result_state"
            android:text="@string/failed"
            android:textColor="@android:color/black"
            android:textStyle="bold|normal"
            android:textSize="26sp"
            android:layout_margin="15dp"
            android:gravity="center_horizontal"/>
    <TextView
            android:layout_below="@+id/text_result_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_result_instruction"
            android:text="@string/result_failed_suggestion_label"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_result_instruction">
        <Button
                android:id="@+id/button_home1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/home"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimaryDark"
                android:visibility="visible"
                android:layout_margin="20dp"
                android:textStyle="bold"
                android:textSize="16sp"
                style="?android:attr/buttonBarButtonStyle"/>
        <Button
                android:id="@+id/button_score_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/score_card_label"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimaryDark"
                android:visibility="visible"
                android:layout_margin="20dp"
                android:textStyle="bold"
                android:textSize="16sp"
                style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>
</RelativeLayout>