<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash"
        tools:context=".activities.LoginActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:fitsSystemWindows="true">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

            <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="150dp"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:theme="@style/TextInputLayoutStyle">

                    <EditText
                            android:id="@+id/input_uname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableEnd="@drawable/perm_group_personal_info"
                            android:hint="@string/prompt_email"
                            android:inputType="text"
                            android:maxLines="1"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        app:passwordToggleEnabled="true"
                        android:layout_height="wrap_content"
                        app:theme="@style/TextInputLayoutStyle">

                    <EditText
                            android:id="@+id/input_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:layout_marginBottom="24dp"
                        android:padding="12dp"
                        android:layout_gravity="left"
                        android:textColor="@android:color/white"
                        android:background="@color/colorPrimaryDark"
                        android:text="@string/login"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>